src/styles/portfolioItem.module.scss
@import 'mixins';
@import './variables';

@media only screen and (max-width: 1250px) {
    .header-box {
        height: 14vh !important;
    }

    .portfolio-heading-container {
        min-height: 14vh !important;
    }

    .main-image {
        max-height: 30vh !important;
    }

    .gallery {
        margin-bottom: 1em !important;
    }
}

@media only screen and (max-width: 600px) {
    .header-box {
        height: 25vh !important;
    }

    .portfolio-heading-container {
        min-height: 16vh !important;
    }

    .project-details {
        margin: 2em auto !important;
        text-align: start !important;
        margin-bottom: 6em !important;

        h1 {
            font-size: 2.25em !important;
        }
    }

    ul {
        li {
            p {
                text-align: left !important; 
            }
        }
    }

    div {
        p {
            text-align: left !important;
        }
    }

    .gallery-header {
        font-size: 1.3em !important;
        margin-top: 3em !important;
    }

    .gallery-line {
        width: 100% !important;
    }

    .gallery {
        width: 100% !important;
        margin-bottom: 2em !important;

        div {
            height: 275px !important;
        }
    }

    .return-button {
        p {
            text-align: center !important;
        }
    }
}

.header-box {
    width: 100vw;
    height: 25vh;
    background: $header-background-colour;
}

p {
    color: $description-text-colour;
    span {
        font-weight: bold;
    }
}

.portfolio-heading-container {
    @include portfolio-heading-style(.5rem);
}

.main-image {
    max-height: 60vh;
    object-fit: cover;
    width: 100%;
    display: flex;
    align-self: center;
    filter: brightness(80%);
}

.project-details {
    margin: 4em auto;
    width: 90%;

    h1 {
        font-weight: bold;
        font-size: 3em;
    }

    h2 {
        margin-top: 1.5em;
        font-weight: bold;
        font-size: 1.75em;
    }
}

.hr-line {
    @include hr-line((to right, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)));
}

.gallery-header {
    margin-top: 4em;
    font-size: 1.75em;
}

.gallery-line {
    @include hr-line((to right, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)));
    width: 60%;
}

.gallery {
    margin-bottom: 4em;
    width: 50%;
    filter: brightness(.8);

    div {
        height: 400px;
        overflow: hidden;
        width: 100%;

        div {
            width: 100%;
        }
    }
}

.return-button {
    background-color: $label-colour;
    padding: 1em;
    border-radius: 30px;

    &:hover {
        opacity: .7;
    }

    &:focus, p:focus {
        opacity: .9;
    }

    p {
        font-weight: bold;
        font-size: 1em;
        display: inline-block;

        &:hover {
            text-decoration: none;
            opacity: .8;
        }
    }
}

